[package]
name = "biosvg"
version = "0.1.8"
edition = "2021"
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description = "Captcha based on SVG."
homepage = "https://github.com/Reverier-Xu/biosvg"
documentation = "https://docs.rs/biosvg"
repository = "https://github.com/Reverier-Xu/biosvg"
readme = "README.md"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.21"
rand = "0.9"
regex = "1.11"
thiserror = "2.0"
