[package]
authors       = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description   = "Captcha based on SVG."
documentation = "https://docs.rs/biosvg"
edition       = "2021"
homepage      = "https://github.com/Reverier-Xu/biosvg"
license       = "MPL-2.0"
name          = "biosvg"
readme        = "README.md"
repository    = "https://github.com/Reverier-Xu/biosvg"
version       = "0.1.10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.21"
rand      = "0.9"
regex     = "1.12"
thiserror = "2.0"
